public abstract class Shape {
    public static float PI = 3.14f;

    public abstract float getArea();
}
