public class Square extends Rectangle{

    public void setSides(float side1) {
        setSides(side1);
    }
}
