@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
class Canvas
abstract Shape {
    {abstract} getArea() : float
    + {static} PI : float
}

class Circle {
    + setRadius(float)
}

class Rectangle {
    + setSides(float,float)
}

class Square {
    + setSides(float)
}


Shape <|-- Circle
Shape <|-- Rectangle
Rectangle <|-- Square
Canvas -r->  Shape : " -shapes 0..* "

@enduml
